kubernetes/apps/flux-system/flux-instance/resources/webhook/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames:
  - flux-webhook.mcf.io
  parentRefs:
  - name: external
    namespace: ingress-system
  rules:
  - backendRefs:
    - name: webhook-receiver
      namespace: flux-system
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /hook/
